[package]
name = "rust_app_ga"
version = "0.1.0"
edition = "2021"
authors = ['Mutsgen <danobez21@gmail.com>']
description = "ERP to GA connector for Arkada"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8.3", features = ["image-all"] }
reqwest = "0.11.26"
sqlx = "0.7.4"

[package.metadata.bundle]
name = "ERPtoGAconnector"
identifier = "io.github.mutsgen.erpToGAConnector"
version = "0.0.1"
