[package]
name = "rust_app_ga"
version = "0.1.0"
edition = "2021"
authors = ['Mutsgen <danobez21@gmail.com>']
description = "ERP to GA connector for Arkada"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
console = "0.15.8"
date = "0.1.3"
druid = { version = "0.8.3", features = ["image-all"] }
editor = "0.1.0"
inquire = { version = "0.7.1", features = ["chrono", "console", "date", "editor"] }
reqwest = "0.11.26"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = "0.7.4"
regex = "1.10.3"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }

[package.metadata.bundle]
name = "ERPtoGAconnector"
identifier = "io.github.mutsgen.erpToGAConnector"
version = "0.0.1"
